
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:animateLayoutChanges="true"
    >
 
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center"
    android:divider="@android:drawable/arrow_down_float"
    android:animateLayoutChanges="true"
    >

    <ImageView android:id="@+id/imgStatus" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_gravity="center" android:layout_margin="1sp" android:contentDescription="@string/imgTitulo"/>


    <Button android:id="@+id/buttonMensagem"
        style="?android:textAppearanceSmall"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/ver_mensagem" 
        android:lines="2"
        android:gravity="center"
        />
    
    
  	<TextView android:id="@+id/frequencia"
        style="?android:textAppearanceMedium"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        
        android:lines="2"
        android:gravity="center"
         />
  	
  
  	
  	   <TextView android:visibility="invisible"
           android:id="@+id/txtIdBD"
          android:layout_width="0dp"
        android:layout_height="0dp"        
        />
  	   

  	   	
    

    <ImageButton android:id="@+id/delete_button"
        android:layout_width="48dp"
        android:layout_height="match_parent"
        android:src="@mipmap/ic_list_remove"
        android:contentDescription="@string/deletar" />
    
	

</LinearLayout>

	<View
	    android:layout_height="1dp"
	    android:layout_width="fill_parent"
	    android:background="@android:color/darker_gray" android:layout_marginBottom="20sp"/>
</LinearLayout>